# pyvista-vtkjs

./: .gitignore  .gitmodules  MANIFEST.in  README.md  index.js  package-lock.json  package.json  pyproject.toml  setup.py  webpack.config.js
.github/workflows/: deploy-pages.yml  python-publish.yml
pages/content/: demo.ipynb  fake-pyvista-dynamic.ipynb
pages/repl/: jupyter-lite.json
pyvista_vtkjs/: __init__.py  cylinder_source.py  install.py  logger.py  plotter.py
pyvista_vtkjs/vtkmodules/: vtkChartsCore.py  vtkCommonColor.py  vtkCommonComputationalGeometry.py  vtkCommonCore.py  vtkCommonDataModel.py  vtkCommonExecutionModel.py  vtkCommonMath.py  vtkCommonTransforms.py  vtkDomainsChemistry.py  vtkFiltersCore.py  vtkFiltersExtraction.py  vtkFiltersFlowPaths.py  vtkFiltersGeneral.py  vtkFiltersGeometry.py  vtkFiltersHybrid.py  vtkFiltersModeling.py  vtkFiltersParallel.py  vtkFiltersParallelDIY2.py  vtkFiltersPoints.py  vtkFiltersSources.py  vtkFiltersStatistics.py  vtkFiltersTexture.py  vtkFiltersVerdict.py  vtkIOGeometry.py  vtkIOInfovis.py  vtkIOLegacy.py  vtkIOPLY.py  vtkIOParallelXML.py  vtkIOXML.py  vtkImagingCore.py  vtkImagingFourier.py  vtkImagingGeneral.py  vtkImagingHybrid.py  vtkImagingMorphological.py  vtkImagingSources.py  vtkImagingStencil.py  vtkInteractionWidgets.py  vtkPythonContext2D.py  vtkRenderingAnnotation.py  vtkRenderingContext2D.py  (+8 more)
pyvista_vtkjs/vtkmodules/numpy_interface/: dataset_adapter.py
utils/: generate_vtk.py  get_vtk_usages.py  vtkimports-gl.txt  vtkimports-plotting.txt  vtkimports.txt
(+2 files in other folders)
