[project]
name = "pyvista-vtkjs"
version = "0.0.1"
description = "An experiment of monkeypatching vtk.js into pyvista"
authors = [{name = "Tom Dudley"}]
dependencies = [
    "webcolors",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "pyvista_vtkjs"
]
