[project]
name = "pyvista-vtkjs"
version = "0.0.1"
description = "An experiment of monkeypatching vtk.js into pyvista"
authors = [{name = "Tom Dudley"}]
dependencies = [
    "numpy",
    "webcolors",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptool]
packages = ['pyvista_vtkjs', 'pyvista_vtkjs.*']

[tool.setuptools.packages.find]
# include = ['pyvista_vtkjs']
# include = ['pyvista_vtkjs']
exclude = ['pyvista_vtkjs.pyvista.tests', 'pyvista_vtkjs.pyvista.tests.*']
